--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -56,6 +56,10 @@ env:
     - SSH_USER_PASSWORD
     - DATABASE_URL
     - BUKMEUP_DATABASE_PASSWORD
+    - SMTP_ADDRESS
+    - SMTP_PORT
+    - SMTP_USERNAME
+    - SMTP_PASSWORD
   clear:
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
